tdf#131395 handle all outstanding events

to ensure the paint gets handled, if this turns out not to be sufficient then
next fallback is to allow a route to Dialog::ensureRepaint to be exposed

Change-Id: I3ab749170dfaeb92eae40a44bb1bde123c47f9f4